samples/_failures_safe/1761424422_52ddc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c34898fa.c: In function ‘lex’:
./samples/SAFE/__tmp_c34898fa.c:168:13: error: expected expression at end of input
  168 |             char buffer[3] =
      |             ^~~~
./samples/SAFE/__tmp_c34898fa.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c34898fa.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c34898fa.c:168:13: error: expected declaration or statement at end of input
